# anchor_project_air_travel

./: README.md
api/: pyproject.toml
cli/: pyproject.toml
cli/src/air_travel_cli/: main.py
data/: flights.sql  load_command.txt  load_command_100k.txt  load_command_fixed.txt  load_script.sql  readme-postgres-setup.md  readme.md  stage_flights.sql  test_file.csv
flights-api/: README.md  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py  test_crud.py  test_main.py
flights-api/tests/: test_crud.py
inference-api/: README.md  crud.py  database.py  flight_inference_jobs.sql  flights_inference_api_main.py  job_status_webhook.py  main.py  models.py  pyproject.toml  schemas.py
llm/: ASRS_DBOnline_2025_11.csv  airline_reports.txt  asrs_fanout_fanin_demo.ipynb  asrs_incidents_enriched.csv  async_llm_incident_reports.ipynb  async_openai_flight_reports.ipynb  async_openai_incident_timeline_summary_demo.ipynb  fastapi_openai_sse_main.py  pyproject.toml
mcp/: air_travel_server.py  pyproject.toml
ml-models/: flight_arrdelay_marketing_airline_quantile_model.ipynb  flight_arrdelay_model_10.onnx  flight_arrdelay_model_90.onnx  load_test.csv  pyproject.toml
postgres/: docker-compose.yml
